test/fail/11-double_declaration_in_model_function.perk
model Test {
    fun f(): void { skip },
    fun f(): void { skip } // This should not be allowed, as 'f' is already declared
}